# bornhack2026-firmware

./: Cargo.toml
bh-2026-fw/: Cargo.toml
bh-2026-fw/src/: main.rs
bh-2026-hal/: Cargo.toml
bh-2026-hal/src/: board.rs  button.rs  display.rs  display_interface.rs  led.rs  lib.rs
bh-2026-traits/: Cargo.toml
bh-2026-traits/src/: button.rs  led.rs  lib.rs
src/: board.rs  display.rs  display_interface.rs  main.rs
